--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+*{
+    color: #fff;
+}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+
 body {
     background-image: url("https://media.istockphoto.com/id/925440650/photo/underwater-bubbles.webp?a=1&b=1&s=612x612&w=0&k=20&c=VYOE0v35U7UXlKsWSS9krUGCTNFmH898jXaOJTscdts=");
     background-size: cover;
